<resources>
    <string name="app_name">clinics</string>
    <string name="welcome_message">Welcome to the Clinics!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CLINICS</string>
    <string name="nav_header_subtitle">dynmamicinnovators32@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="phoneNumber">Phone Number</string>

    <string name="menu_home">Home</string>
    <string name="menu_service">Service</string>
    <string name="menu_appointment">Appointment</string>
    <string name="menu_doctors">Doctors</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="menu_contact">Contact</string>
    <string name="services">Services</string>
    <string name="appointment">Appointment</string>
    <string name="welcome_to_the_clinics">Welcome to the Clinics!</string>
    <string name="quot_the_greatest_wealth_is_health_quot_virgil">\"The greatest wealth is health.\" - Virgil</string>
    <string name="about_the_hospital_called_clinics">About the Hospital called Clinics</string>
    <string name="achievements" translatable="false">Achievements:</string>
    <string name="goals">Goals: </string>
    <string name="aims">Aims: </string>
    <string name="testimonies">Testimonies: </string>
    <string name="doctor_name_description">Enter the name of the doctor</string>
    <string name="patient_name">Patient Name</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="doctor_name_hint">Enter doctor\'s name</string>
    <string name="time">Time</string>
    <string name="email">Email</string>
    <string name="date">Date</string>
    <string name="thank_you_for_choosing_clinics">Thank you for choosing Clinics!</string>
    <string name="send_email">Send Email</string>
    <string name="call_hospital">Call Hospital</string>
    <string name="in_case_of_emergencies_or_urgent_medical_assistance_we_strongly_advise_you_to_call_our_emergency_helpline_immediately_for_immediate_support">In case of emergencies or urgent medical assistance, we strongly advise you to call our emergency helpline immediately for immediate support.</string>
    <string name="Day" />
    <string name="day">Day</string>
    <string name="submit">Submit</string>
    <string-array name="spinner_items">
        <item>Dr. Daniel Rodriguez</item>
        <item>Dr. Benjamin Cooper</item>
        <item>Dr. Alex Johnson</item>
        <item>Dr. Olivia Hall</item>
        <item>Dr. Megan Thompson</item>
        <item>Dr. Michael Johnson</item>
        <item>Dr. Robert Wilson</item>
    </string-array>

    <string-array name="available_times">
        <item>9am - 12pm</item>
        <item>1pm - 4pm</item>
        <item>5pm - 8pm</item>
        <item>9pm - 11pm</item>
    </string-array>

    <string name="achievement_main">Achievements</string>
    <string name="all_achievements">
    <![CDATA[
        • Award-Winning Patient Safety Initiatives
        • Leaders in Minimally Invasive Surgeries
        • Excellence in Emergency Care
        • Pioneers in Telemedicine Services
        • Recognized for Exceptional Maternity Care
        • Commitment to Medical Education and Training
    ]]>
</string>
    <string name="goal_main">Goals</string>
    <string name="all_goals">
    <![CDATA[
        • Provide patient-centered care with a focus on improving health outcomes.
        • Expand access to healthcare services and reach underserved communities.
        • Foster a culture of continuous learning and professional development for our staff.
        • Embrace and integrate innovative technologies to enhance patient care.
        • Establish strategic partnerships for comprehensive healthcare solutions.
        • Empower individuals to actively participate in their healthcare decisions.
    ]]>
</string>


        <string name="all_aims">All Aims</string>
<string name="aim1">To deliver exceptional and compassionate healthcare services to every patient.</string>
<string name="aim2">To continuously improve patient outcomes through evidence-based practices.</string>
<string name="aim3">To foster a supportive and inclusive environment for staff, patients, and families.</string>
<string name="aim4">To actively engage with the community and promote health and wellness.</string>
<string name="aim5">To be a leader in healthcare innovation and research.</string>
<string name="aim6">To ensure patient safety and provide a comfortable healing environment.</string>

// Services
    <string name="emergency_care">Emergency Care</string>
    <string name="inpatient_care">Inpatient Care</string>
    <string name="outpatient_care">Outpatient Care</string>
    <string name="surgery">Surgery</string>
    <string name="diagnostic_service">Diagnostic Services</string>
    <string name="maternity">Maternity and Neonatal Care</string>
    <string name="rehabilitation">Rehabilitation Services</string>
    <string name="mental_health">Mental Health Services</string>
    <string name="specialized_services">Specialized Medical Services</string>
    <string name="pharmacy_service">Pharmacy Services</string>
    <string name="palliative_care">Palliative Care and Hospice Services</string>
    <string name="todo">TODO</string>

</resources>