<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_menu_service"
            android:title="@string/menu_service" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_menu_appointment"
            android:title="@string/menu_appointment" />
        <item
            android:id="@+id/nav_doctors"
            android:icon="@drawable/ic_menu_appointment"
            android:title="@string/menu_doctors" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_appointment"
            android:title="@string/menu_contact" />
    </group>
</menu>