<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/contact_gif"
    android:gravity="center">

    <TextView
        android:id="@+id/message_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/thank_you_for_choosing_clinics"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message_textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="2dp" android:text="@string/in_case_of_emergencies_or_urgent_medical_assistance_we_strongly_advise_you_to_call_our_emergency_helpline_immediately_for_immediate_support"
        android:textSize="12sp"
        android:padding="10dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_hospital"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email" />

</LinearLayout>
